Ajout du fichier style.css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- imports de librairies -->
   <link rel="stylesheet" href="https://designmodo.github.io/Flat-UI/dist/css/vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://designmodo.github.io/Flat-UI/dist/css/flat-ui.css">
+  <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" crossorigin="anonymous"></script>
   <!-- fin d'imports de librairies -->
 
@@ -18,7 +19,7 @@
 
   <!-- fin imports personnels -->
 
-  <style>
+  <!-- <style>
     /* les styles de notre page, ils positionnent correctement le footer */
 
     body {
@@ -55,7 +56,7 @@
         line-height: 40px;
       }
     }
-  </style>
+  </style> -->
 </head>
 
 <body class="text-center">
@@ -66,7 +67,7 @@
   <h2>Bonjour je suis l'élève 1</h2>
 
   <!-- Je me décrit en quelques lignes -->
-  <p></p>
+  <p>J'aime la bière, les voyages, la musique et les femmes !</p>
 
   <!-- Je met mon nom ici -->
   <h2>Bonjour je suis l'élève 2</h2>
