--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
   <h2>Bonjour je suis l'élève 1</h2>
 
   <!-- Je me décrit en quelques lignes -->
-  <p></p>
+
 
   <!-- Je met mon nom ici -->
   <h2>Bonjour je suis l'élève 2</h2>
 
   <!-- Je me décrit en quelques lignes -->
-  <p> J'aime les pandas, le jaune moutarde et les Bulls. </p>
+  <a href="eleve_2.html" >Description eleve 2</a>
 
   <!-- Je met mon nom ici -->
   <!-- <h2>Bonjour je suis l'élève 3</h2> -->
