--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <h2>Bonjour je suis l'élève 1</h2>
 
   <!-- Je me décrit en quelques lignes -->
-  <p>J'aime la bière, les voyages, la musique et les femmes !</p>
+  <a href="eleve_1.html">Description Eleve 1</a>
 
   <!-- Je met mon nom ici -->
   <h2>Bonjour je suis l'élève 2</h2>
